// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideNav /> #handleMenuToggleClick toggles menu when button is clicked 1`] = `
<div
  className="is-fluid grid side-nav-wrapper"
>
  <div
    className="row is-d-flex is-xl-d-none side-nav-expand"
  >
    <button
      aria-controls="side-nav-wrapper"
      aria-expanded={true}
      className="has-justify-content-center has-align-items-center is-d-flex is-xl-d-none"
      onClick={[Function]}
    >
      <Menu
        focusable="false"
        role="presentation"
        size={20}
      />
       
      <span
        className="has-black-text-color"
      >
        Explore
      </span>
    </button>
  </div>
  <nav
    className="row side-nav-menu accordion has-p-lg"
    data-accordion="side-nav-accordion"
    id="side-nav-wrapper"
  >
    <p
      className="version-text has-no-p has-gray800-text-color is-xs-12 column"
    >
      Version 
      9.9.9
    </p>
    <div
      className="collapsible is-xs-12 column has-no-p"
      data-collapsible="nav-collapsible-content0"
      data-visible="false"
      key="#"
    >
      <h4
        className="paragraph"
      >
        <button
          className="collapsible-trigger"
          data-parent="side-nav-accordion"
          data-target="nav-collapsible-content0"
          id="nav-collapsible-trigger0"
        >
          Test Header
        </button>
      </h4>
      <ul
        className="collapsible-content"
        id="nav-collapsible-content0"
      >
        <li
          key="Test 1"
          role="none"
        >
          <NavLink
            activeClassName="active"
            className="side-nav-link-item has-black-text-color is-d-flex has-align-items-center"
            onClick={[Function]}
            role="menuitem"
            to="#"
          >
            <Link
              aria-current={null}
              className="side-nav-link-item has-black-text-color is-d-flex has-align-items-center"
              onClick={[Function]}
              role="menuitem"
              to="#"
            >
              <a
                aria-current={null}
                className="side-nav-link-item has-black-text-color is-d-flex has-align-items-center"
                href="/"
                onClick={[Function]}
                role="menuitem"
              >
                Test 1
                 
                <ChevronRight
                  focusable="false"
                  role="presentation"
                  size={16}
                />
              </a>
            </Link>
          </NavLink>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`<SideNav /> #handleMenuVisibility hides menu at or below 1199 1`] = `
<div
  className="is-fluid grid side-nav-wrapper"
>
  <div
    className="row is-d-flex is-xl-d-none side-nav-expand"
  >
    <button
      aria-controls="side-nav-wrapper"
      aria-expanded={false}
      className="has-justify-content-center has-align-items-center is-d-flex is-xl-d-none rotate-180"
      onClick={[Function]}
    >
      <Menu
        focusable="false"
        role="presentation"
        size={20}
      />
       
      <span
        className="has-black-text-color"
      >
        Explore
      </span>
    </button>
  </div>
  <nav
    className="row side-nav-menu accordion has-p-lg is-d-none"
    data-accordion="side-nav-accordion"
    id="side-nav-wrapper"
  >
    <p
      className="version-text has-no-p has-gray800-text-color is-xs-12 column"
    >
      Version 
      9.9.9
    </p>
    <div
      className="collapsible is-xs-12 column has-no-p"
      data-collapsible="nav-collapsible-content0"
      data-visible="false"
      key="#"
    >
      <h4
        className="paragraph"
      >
        <button
          className="collapsible-trigger"
          data-parent="side-nav-accordion"
          data-target="nav-collapsible-content0"
          id="nav-collapsible-trigger0"
        >
          Test Header
        </button>
      </h4>
      <ul
        className="collapsible-content"
        id="nav-collapsible-content0"
      >
        <li
          key="Test 1"
          role="none"
        >
          <NavLink
            activeClassName="active"
            className="side-nav-link-item has-black-text-color is-d-flex has-align-items-center"
            onClick={[Function]}
            role="menuitem"
            to="#"
          >
            <Link
              aria-current={null}
              className="side-nav-link-item has-black-text-color is-d-flex has-align-items-center"
              onClick={[Function]}
              role="menuitem"
              to="#"
            >
              <a
                aria-current={null}
                className="side-nav-link-item has-black-text-color is-d-flex has-align-items-center"
                href="/"
                onClick={[Function]}
                role="menuitem"
              >
                Test 1
                 
                <ChevronRight
                  focusable="false"
                  role="presentation"
                  size={16}
                />
              </a>
            </Link>
          </NavLink>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`<SideNav /> #handleMenuVisibility shows menu above 1199 1`] = `
<div
  className="is-fluid grid side-nav-wrapper"
>
  <div
    className="row is-d-flex is-xl-d-none side-nav-expand"
  >
    <button
      aria-controls="side-nav-wrapper"
      aria-expanded={true}
      className="has-justify-content-center has-align-items-center is-d-flex is-xl-d-none"
      onClick={[Function]}
    >
      <Menu
        focusable="false"
        role="presentation"
        size={20}
      />
       
      <span
        className="has-black-text-color"
      >
        Explore
      </span>
    </button>
  </div>
  <nav
    className="row side-nav-menu accordion has-p-lg"
    data-accordion="side-nav-accordion"
    id="side-nav-wrapper"
  >
    <p
      className="version-text has-no-p has-gray800-text-color is-xs-12 column"
    >
      Version 
      9.9.9
    </p>
    <div
      className="collapsible is-xs-12 column has-no-p"
      data-collapsible="nav-collapsible-content0"
      data-visible="false"
      key="#"
    >
      <h4
        className="paragraph"
      >
        <button
          className="collapsible-trigger"
          data-parent="side-nav-accordion"
          data-target="nav-collapsible-content0"
          id="nav-collapsible-trigger0"
        >
          Test Header
        </button>
      </h4>
      <ul
        className="collapsible-content"
        id="nav-collapsible-content0"
      >
        <li
          key="Test 1"
          role="none"
        >
          <NavLink
            activeClassName="active"
            className="side-nav-link-item has-black-text-color is-d-flex has-align-items-center"
            onClick={[Function]}
            role="menuitem"
            to="#"
          >
            <Link
              aria-current={null}
              className="side-nav-link-item has-black-text-color is-d-flex has-align-items-center"
              onClick={[Function]}
              role="menuitem"
              to="#"
            >
              <a
                aria-current={null}
                className="side-nav-link-item has-black-text-color is-d-flex has-align-items-center"
                href="/"
                onClick={[Function]}
                role="menuitem"
              >
                Test 1
                 
                <ChevronRight
                  focusable="false"
                  role="presentation"
                  size={16}
                />
              </a>
            </Link>
          </NavLink>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`<SideNav /> #render renders 1`] = `
<SideNav>
  <div
    className="is-xs-12 is-xl-2 column has-no-p"
    id="side-nav"
  >
    <div
      className="is-fluid grid side-nav-wrapper"
    >
      <div
        className="row is-d-flex is-xl-d-none side-nav-expand"
      >
        <button
          aria-controls="side-nav-wrapper"
          aria-expanded={false}
          className="has-justify-content-center has-align-items-center is-d-flex is-xl-d-none rotate-180"
          onClick={[Function]}
        >
          <Menu
            focusable="false"
            role="presentation"
            size={20}
          />
           
          <span
            className="has-black-text-color"
          >
            Explore
          </span>
        </button>
      </div>
      <nav
        className="row side-nav-menu accordion has-p-lg is-d-none"
        data-accordion="side-nav-accordion"
        id="side-nav-wrapper"
      >
        <p
          className="version-text has-no-p has-gray800-text-color is-xs-12 column"
        >
          Version 
          9.9.9
        </p>
        <div
          className="collapsible is-xs-12 column has-no-p"
          data-collapsible="nav-collapsible-content0"
          data-visible="false"
          key="#"
        >
          <h4
            className="paragraph"
          >
            <button
              className="collapsible-trigger"
              data-parent="side-nav-accordion"
              data-target="nav-collapsible-content0"
              id="nav-collapsible-trigger0"
            >
              Test Header
            </button>
          </h4>
          <ul
            className="collapsible-content"
            id="nav-collapsible-content0"
          >
            <li
              key="Test 1"
              role="none"
            >
              <NavLink
                activeClassName="active"
                className="side-nav-link-item has-black-text-color is-d-flex has-align-items-center"
                onClick={[Function]}
                role="menuitem"
                to="#"
              >
                <Link
                  aria-current={null}
                  className="side-nav-link-item has-black-text-color is-d-flex has-align-items-center"
                  onClick={[Function]}
                  role="menuitem"
                  to="#"
                >
                  <a
                    aria-current={null}
                    className="side-nav-link-item has-black-text-color is-d-flex has-align-items-center"
                    href="/"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    Test 1
                     
                    <ChevronRight
                      focusable="false"
                      role="presentation"
                      size={16}
                    />
                  </a>
                </Link>
              </NavLink>
            </li>
          </ul>
        </div>
      </nav>
    </div>
  </div>
</SideNav>
`;
